+ dodanie dodawania użytkownika + testy